RESOLVED FIXED278842
WKWebView _obscuredInsets sometimes incorrectly applied in element fullscreen
https://bugs.webkit.org/show_bug.cgi?id=278842
Summary WKWebView _obscuredInsets sometimes incorrectly applied in element fullscreen
Andy Estes
Reported 2024-08-28 22:00:33 PDT
SSIA
Attachments
Andy Estes
Comment 1 2024-08-28 22:00:35 PDT
Andy Estes
Comment 2 2024-08-28 22:25:21 PDT
EWS
Comment 3 2024-08-29 11:14:43 PDT
Committed 282915@main (14ac3c34ea68): <https://commits.webkit.org/282915@main> Reviewed commits have been landed. Closing PR #32875 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.